welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: not found: value nus
			{ if (nums(i)==nums(i+2)-2 || (nus(i) ==nums(i+2)-1) )
                                                       ^